--- a/Події/index.css
+++ b/Події/index.css
@@ -1,4 +1,4 @@
-.button__element {
+/* .button__element {
     list-style: none;
     background-color: cadetblue;
     height: 100%;
@@ -11,4 +11,14 @@
     background-color: blueviolet;
     border-radius: 50px;
     opacity: 0;
-}
+} */
+
+#box {
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    }
