--- a/Події/index.css
+++ b/Події/index.css
@@ -13,7 +13,7 @@
     opacity: 0;
 } */
 
-#box {
+/* #box {
     width: 50px;
     height: 50px;
     background-color: red;
@@ -21,4 +21,13 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    }
+    } */
+
+
+    /* .block{
+        display: block;
+        background-color: red;
+        width: 50px;
+        height: 50px;
+        border-radius: 15px;
+        } */
